--- a/src/frontend/src/app/app.component.html
+++ b/src/frontend/src/app/app.component.html
@@ -88,7 +88,7 @@
 
 
 
-<div class="map-container"  *ngIf="isHomePage">
+<!--<div class="map-container"  *ngIf="isHomePage">
 
   <ul>
     <li>
@@ -101,9 +101,9 @@
     </li>
   </ul>
 
-  <!-- <label for="name" class="found">Назва притулку:</label>
+   <label for="name" class="found">Назва притулку:</label>
   <input type="text" id="name" name="name">
-  <button class="foundMAp">Шукати</button> -->
-</div>
+  <button class="foundMAp">Шукати</button>
+</div>-->
 
 
