--- a/src/frontend/src/app/app.component.css
+++ b/src/frontend/src/app/app.component.css
@@ -1,161 +1,286 @@
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
 }
 
+
 body {
-    width: 100%;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
+
+  width: 100%;
+  height: 100%;
+  background-color: #f4f4f4;
+  color: #333;
+
 }
 
 header {
-    background-color: #fc9b00;
-    padding: 20px;
-    text-align: center;
-    color: white;
-    display: flex;
-    justify-content: flex-end;
+  background-color: #fc8f00;
+  padding: 20px;
+  text-align: center;
+  color: white;
+  display: flex;
 
 
 }
 
 h1 {
-    font-size: 2rem;
-    padding: 20px 20px 20px 20px;
+  font-size: 2rem;
+  padding: 20px 20px 20px 20px;
 }
 
 nav {
-    margin: 20px auto;
-    text-align: center;
+  font-family: "e-ukr";
+  margin: 20px auto;
+  text-align: center;
+  margin-right: 50px;
+
 }
 
 nav ul {
-    list-style-type: none;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display:  flex;
+  align-items: center;
+  justify-items: center;
 
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 15px;
-    margin-left: 30px;
+nav ul .Descktop .nav-item {
+  display: inline-block;
+  margin: 0 15px;
+  margin-left: 30px;
 }
 
 nav ul li a {
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1.2rem;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2rem;
 
 }
 
 nav ul li a:hover {
-    color: #000000;
-    transition: 0.6s ease-in-out;
+  color: #000000;
+  transition: 0.2s ease-in-out;
 }
 
 footer {
-    text-align: center;
-    margin-top: 50px;
-    padding: 10px;
-    background-color: #333;
-    color: white;
-}
-
-.map-container {
-    display: flex;
-    flex-direction: column; /* Додано, щоб елементи розташовувались вертикально */
-    justify-content: center;
-    align-items: center;
-    height: auto; /* Змініть на auto, щоб містився вміст */
-}
-
-.map-container ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.map-container li {
-    text-align: center;
+  text-align: center;
+  margin-top: 50px;
+  padding: 10px;
+  background-color: #333;
+  color: white;
 }
 
 .LinkIcon {
-    position: absolute;
-    top: 32px;
-    left: 40px;
+  position: absolute;
+  top: 8px;
+  left: 100px;
 }
-.found {
+
+.LinkIconPhone {
+  position: absolute;
+  top: 8px;
+  left: 230px;
+}
+
+.map-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+}
+
+.map-container ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.map-container li {
+  text-align: center;
+}
+
+
+/* .found {
     display: block;
-    margin-top: 20px; /* Відстань між картою і повідомленням */
-    text-align: center; /* Центрувати текст */
+    margin-top: 20px;
+    text-align: center;
     font-size: larger;
 
-}
+} */
 
-input[type="text"] {
-    width: 10%; /* Зробити поле введення на всю ширину */
-    padding: 10px; /* Внутрішній відступ для кращого вигляду */
-    margin-top: 5px; /* Відстань між label і полем введення */
-    margin-bottom: 10px; /* Відстань після поля введення */
-
-
-}
+/* input[type="text"] {
+    width: 10%;
+    padding: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+} */
 
 .foundMAp {
-    padding: 10px 20px;
-    cursor: pointer;
+  padding: 10px 20px;
+  cursor: pointer;
 
 }
+
 .foundMAp:hover {
-    padding: 10px 20px;
-    cursor: pointer;
-    background-color: tomato;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: tomato;
 
 }
 
 .Regg{
- display: flex;
- justify-content:center;
- align-items: center;
+
+  font-family: "e-ukr";
+  display: flex;
+  justify-content:center;
+  align-items: center;
+
+
+}
+
+.ReggPhone {
+  font-family: "e-ukr";
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  margin-top: 40px;
+  margin-left: 20px;
+
 }
 
 .Enter{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1.2rem;
-    margin-right: 10px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 1.2rem;
+  margin-right: 10px;
+
 
 }
 
 .Enter:hover{
-    text-decoration: none;
-    color: #000000;
-    transition: 0.6s ease-in-out;
+  text-decoration: none;
+  color: #000000;
+  transition: 0.2s ease-in-out;
 }
 
 .Registr{
-    text-decoration: none;
-    color: #ffffff;
-    font-size: 1.2rem;
-    margin-left: 10px;
+  border-radius: 15px;
+  background-color: #f4f4f4;
+  text-decoration: none;
+  color: #000000;
+  font-size: 1.2rem;
+  margin-left: 10px;
+  padding: 10px;
 
 }
 
 .Registr:hover{
-    text-decoration: none;
-    color: #000000;
-    transition: 0.6s ease-in-out;
-
+  background-color: #000000;
+  text-decoration: none;
+  color: #f4f4f4;
+  transition: 0.2s ease-in-out;
 
 }
 
 .img{
-  width: 50px;
-  height: 50px;
+  width: 120px;
+  height: 120px;
+}
+
+.imgPhone{
+  width: 60px;
+  height: 60px;
+}
+
+.btn-close{
+  margin-right: 20px;
+  margin-top: -30px;
+  size: 55px;
+}
+
+.navbar-toggler-icon{
+  width: 30px;
+  height: 30px;
+  background-size: contain;
+}
+
+.offcanvas-header{
+  color: #000000;
+  background-color: #fc8f00;
+}
+
+.offcanvas-header h2{
+  font-family: "e-ukr";
+  margin-top:20px ;
+  margin-left:30px ;
+  margin-bottom:35px ;
+}
+
+.offcanvas-body {
+  background-color: #fc8f00;
+}
+
+
+.Phone_and_Tablet .nav-item .nav-link{
+  margin-bottom: 20px;
+}
+
+@media (min-width: 992px) and (max-width: 1470px) {
+  .navbar {
+    display: flex;
+    align-items: center;
+    padding-left: 70px;
+  }
+
+  .LinkIcon {
+    position: absolute;
+    top: 8px;
+    left: -12px;
+  }
+}
+
+
+
+/* розібратися як працює */
+/* .nav-item {
+   position: relative;
+   display: inline-block;
+ } */
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Показати випадаюче меню при наведенні */
+.nav-item:hover .dropdown-content {
+  display: block;
   border-radius: 10px;
 }
-.slash{
 
-}
+/* .nav-item:hover .dropbtn {
+  border-radius: 10px;
+  background-color: #ddd;
+  color: black;
+
+} */
